--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/RenaudBernier/SOEN287-Project/issues"
   },
-  "homepage": "https://github.com/RenaudBernier/SOEN287-Project#readme"
+  "homepage": "https://github.com/RenaudBernier/SOEN287-Project#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "mysql": "^2.18.1"
+  }
 }
